# AWAP

./: README.md  awap.db  pyproject.toml
.github/workflows/: ci.yml
src/awap/: __init__.py  artifacts.py  auth.py  catalog.py  database.py  domain.py  evaluation.py  knowledge.py  main.py  migrations.py  providers.py  queue.py  repository.py  runtime.py  schedule.py  security.py  service.py  templates.py  worker.py
src/awap/api/: app.py
src/awap/ui/: index.html
src/awap/ui/static/: app.js  styles.css
tests/: test_api.py  test_domain.py  test_frontend.py  test_load_smoke.py  test_migrations.py  test_platform_hardening.py  test_priority_one_features.py  test_priority_three_features.py  test_priority_two_features.py  test_priority_zero_features.py  test_providers.py  test_runs.py
