[project]
name = "awap"
version = "0.1.0"
description = "AI Workflow Automation Platform backend foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
awap-dev = "awap.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/awap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
